<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/custom_row_no_date"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:padding="7dp">
  <EditText	android:id="@+id/newTemplate"
  			android:layout_width = "fill_parent"
  			android:layout_height="wrap_content"
  			android:layout_margin="5dp"
  			android:hint="@string/find_template_hint"
  			android:inputType="textShortMessage"/>
  <TextView android:id="@+id/escape_seqs"
  			android:layout_width = "wrap_content"
  			android:layout_height = "wrap_content"
  			android:text = "@string/temp_esc_title"
  			android:layout_below = "@id/newTemplate" />
  <TextView android:id="@+id/escape_seq_l"
  			android:layout_width = "wrap_content"
  			android:layout_height = "wrap_content"
  			android:text = "@string/temp_esc_l"
  			android:layout_marginRight = "12dp"
  			android:layout_below = "@id/escape_seqs"/>
  <TextView android:id="@+id/escape_seq_l_result"
  			android:layout_width = "wrap_content"
  			android:layout_height = "wrap_content"
  			android:text = "@string/temp_esc_l_subst"
  			android:layout_below = "@id/escape_seqs"
  			android:layout_toRightOf="@id/escape_seq_l"/>
  <TextView android:id="@+id/escape_seq_d"
  			android:layout_width = "wrap_content"
  			android:layout_height = "wrap_content"
  			android:text = "@string/temp_esc_d"
  			android:layout_marginRight = "12dp"
  			android:layout_below = "@id/escape_seq_l" />
  <TextView android:id="@+id/escape_seq_d_result"
  			android:layout_width = "wrap_content"
  			android:layout_height = "wrap_content"
  			android:text = "@string/temp_esc_d_subst"
  			android:layout_below = "@id/escape_seq_l"
  			android:layout_toRightOf="@id/escape_seq_d"/>
  <TextView android:id="@+id/escape_seq_t"
  			android:layout_width = "wrap_content"
  			android:layout_height = "wrap_content"
  			android:text = "@string/temp_esc_t"
  			android:layout_marginRight = "12dp"
  			android:layout_below = "@id/escape_seq_d" />
  <TextView android:id="@+id/escape_seq_t_result"
  			android:layout_width = "wrap_content"
  			android:layout_height = "wrap_content"
  			android:text = "@string/temp_esc_t_subst"
  			android:layout_below = "@id/escape_seq_d"
  			android:layout_toRightOf="@id/escape_seq_t"/>
  <TextView android:id="@+id/escape_seq_n"
  			android:layout_width = "wrap_content"
  			android:layout_height = "wrap_content"
  			android:text = "@string/temp_esc_n"
  			android:layout_marginRight = "12dp"
  			android:layout_below = "@id/escape_seq_t" />
  <TextView android:id="@+id/escape_seq_n_result"
  			android:layout_width = "wrap_content"
  			android:layout_height = "wrap_content"
  			android:text = "@string/temp_esc_n_subst"
  			android:layout_below = "@id/escape_seq_t"
  			android:layout_toRightOf="@id/escape_seq_n"/>
  <TextView android:id="@+id/escape_seq_f"
  			android:layout_width = "wrap_content"
  			android:layout_height = "wrap_content"
  			android:text = "@string/temp_esc_f"
  			android:layout_marginRight = "12dp"
  			android:layout_below = "@id/escape_seq_n" />
  <TextView android:id="@+id/escape_seq_f_result"
  			android:layout_width = "wrap_content"
  			android:layout_height = "wrap_content"
  			android:text = "@string/temp_esc_f_subst"
  			android:layout_below = "@id/escape_seq_n"
  			android:layout_toRightOf="@id/escape_seq_f"/>
  <TextView android:id="@+id/escape_seq_s"
  			android:layout_width = "wrap_content"
  			android:layout_height = "wrap_content"
  			android:text = "@string/temp_esc_s"
  			android:layout_marginRight = "12dp"
  			android:layout_below = "@id/escape_seq_f" />
  <TextView android:id="@+id/escape_seq_s_result"
  			android:layout_width = "wrap_content"
  			android:layout_height = "wrap_content"
  			android:text = "@string/temp_esc_s_subst"
  			android:layout_below = "@id/escape_seq_f"
  			android:layout_toRightOf="@id/escape_seq_s"/>
  <TextView android:id="@+id/escape_seq_percent"
  			android:layout_width = "wrap_content"
  			android:layout_height = "wrap_content"
  			android:text = "@string/temp_esc_p"
  			android:layout_marginRight = "12dp"
  			android:layout_below = "@id/escape_seq_s" />
  <TextView android:id="@+id/escape_seq_percent_result"
  			android:layout_width = "wrap_content"
  			android:layout_height = "wrap_content"
  			android:text = "@string/temp_esc_p_subst"
  			android:layout_below = "@id/escape_seq_s"
  			android:layout_toRightOf="@id/escape_seq_percent"/>
  <LinearLayout	android:id="@+id/buttons"
  				android:orientation="horizontal"
  				android:layout_width = "fill_parent"
  				android:layout_height = "wrap_content"
  				android:layout_below="@id/escape_seq_percent"
  				android:layout_centerHorizontal="true"
  				android:layout_margin="7dp">
  		<Button	android:id="@+id/addTemplateButton"
  				android:layout_width = "0dp"
  				android:layout_height = "wrap_content"
  				android:layout_weight = ".5"
  				android:text = "@string/temp_add_button"
  				android:textSize="16sp"/>
  		<Button	android:id="@+id/addTemplateCancelButton"
  				android:layout_width = "0dp"
  				android:layout_height = "wrap_content"
  				android:layout_weight = ".5"
  				android:text = "@string/temp_cancel_button"
  				android:textSize="16sp"/>
  </LinearLayout>
</RelativeLayout>