<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  android:gravity="center_horizontal"
  android:background="#000000">
  <TextView 
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/sett_eqn_title"
      android:textColor="#FFFFFF"
      android:textSize="18dp"
      android:background="#3F3F3F"/>
  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
      <CheckBox
          android:id="@+id/sett_addition_check"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:checked="true"
          android:layout_marginLeft="10dp"
          android:paddingTop="10dp"/>
      <TextView
          android:id="@+id/sett_addition_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/sett_addition"
          android:textColor="#FFFFFF"
          android:textSize="26dp"
          android:paddingLeft="6dp"/>
      <CheckBox
          android:id="@+id/sett_subtraction_check"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:checked="true"
		  android:layout_marginLeft="20dp"
		  android:paddingTop="10dp"/>
      <TextView
          android:id="@+id/sett_subtraction_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/sett_subtraction"
          android:textColor="#FFFFFF"
          android:textSize="26dp"
          android:paddingLeft="6dp"/>
      <CheckBox
          android:id="@+id/sett_multiplication_check"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:checked="true"
          android:layout_marginLeft="20dp"
          android:paddingTop="10dp"/>
      <TextView
          android:id="@+id/sett_multiplication_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/sett_multiplication"
          android:textColor="#FFFFFF"
          android:textSize="26dp"
          android:paddingLeft="6dp"/>
  </LinearLayout>
  <TextView 
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/sett_num_digits"
      android:textColor="#FFFFFF"
      android:textSize="14dp"/>
  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
	  <SeekBar
	      android:id="@+id/sett_num_digits"
	      android:layout_width="0dp"
	      android:layout_height="wrap_content"
	      android:layout_weight=".9"
	      android:max="4"
	      android:progress="2"/>
	  <TextView
	      android:id="@+id/sett_num_digits_disp"
	      android:layout_width="0dp"
	      android:layout_height="wrap_content"
	      android:layout_weight=".1"
	      android:layout_marginTop="3dp"
	      android:paddingLeft="5dp"
	      android:text=""
	      android:textColor="#FFFFFF"
	      android:textSize="12dp"/>
  </LinearLayout>
  <TextView 
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/sett_expr_length"
      android:textColor="#FFFFFF"
      android:textSize="14dp"/>
  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
	  <SeekBar
	      android:id="@+id/sett_expr_length"
	      android:layout_width="0dp"
	      android:layout_height="wrap_content"
	      android:layout_weight=".9"
	      android:max="5"
	      android:progress="0"/>
	  <TextView
	      android:id="@+id/sett_expr_length_disp"
	      android:layout_width="0dp"
	      android:layout_height="wrap_content"
	      android:layout_weight=".1"
	      android:text=""
	      android:textColor="#FFFFFF"
	      android:textSize="12dp"/> <!-- This is actually just a filler -->
  </LinearLayout>
  <TextView 
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/sett_example"
      android:textColor="#FFFFFF"
      android:textSize="14dp"/>
  <TextView
      android:id="@+id/sett_example"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:textColor="#FFFFFF"
      android:textSize="14dp"/>
</LinearLayout>
